adicionando estilização no post

--- a/src/Global.css
+++ b/src/Global.css
@@ -7,7 +7,7 @@
     --green-700:#4D8F74; /*oklch(0.453, 0.124, 130.933)*/
     --lime-800:#3C5A58; /*oklch(0.378, 0.077, 168.94)*/
     --green-950:#2A3F3E; /*oklch(0.266, 0.065, 152.934)*/
-
+    --green-400:#54c28d;
     --green-500: #00875f;
 }
 
