--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,3 +1,71 @@
-.Post{
+.post{
+    background-color: var(--lime-800);
+    border-radius: 8px;
+    padding: 2.5rem;
 
+}
+
+/*estilização para posts que contenha um post antes dele*/
+.post + .post{
+    margin-top: 2rem;
+}
+
+.content{
+    line-height: 1.6;
+    color: var(--gray-300);
+    margin-top: 1.5rem;
+}
+
+.content p{
+    margin-top:1rem;
+}
+
+.content a{
+    font-weight: bold;
+    color: var(--green-500);
+    text-decoration: none;
+}
+
+.content a:hover{
+    color: var(--green-400);
+}
+
+/* o > serve para estilizar só o primeiro elemento com a tag*/
+.post > header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post > header time{
+    font-size: 0.875rem;
+    color: var(--gray-400);
+}
+
+.author{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.author img{
+    width: calc(3rem + 10px);
+    height: (3rem + 10px);
+    border-radius: 8px;
+    border: 3px solid var(--green-950);
+    outline: 2px solid var(--green-700)
+
+}
+
+.authorInfo strong{
+    display: block;
+    color: var(--gray-300);
+    line-height: 1.6;
+}
+
+.authorInfo span{
+    display: block;
+    font-size: 0.875rem;
+    color: var(--gray-400);
+    line-height: 1.6;
 }
