--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -69,3 +69,59 @@
     color: var(--gray-400);
     line-height: 1.6;
 }
+
+.commentForm{
+    width: 100%;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    border-top: 1px solid var(--green-950);
+}
+
+.commentForm > strong{
+    line-height: 1.6;
+    font-weight: bold;
+    color: var(--yellow-50);
+}
+
+.commentForm textarea{
+    width: 100%;
+    background: var(--green-950);
+    border:0;
+    height: 6rem;
+    resize: none;
+    border-radius: 8px;
+    border-color: var(--green-400);
+    padding: 1rem;
+    color:var(--gray-300);
+    line-height: 1.4;
+    margin-top:1rem;
+}
+
+.commentForm footer{
+    visibility: hidden;
+    max-height: 0;
+}
+
+/*o focus-within é aplicado quando queremos analisar todos inputs dentro do container*/
+.commentForm:focus-within footer{
+    visibility: visible;
+    max-height: none;
+}
+
+.commentForm button[type=submit]{
+    /*primeiro alturas segundo larguras*/
+    background: var(--green-500);
+    border: 0;
+    margin-top:1rem;
+    padding: 1rem 1.5rem;
+    color:var(--white);
+    font-weight:bold;
+    border-radius: 8px;
+    cursor:pointer;
+    
+    transition: background-color 0.2s ;
+}
+
+.commentForm button[type=submit]:hover{
+    background:var(--green-400);
+}
