adcionando comentarios e estilizando

--- a/src/Global.css
+++ b/src/Global.css
@@ -9,6 +9,8 @@
     --green-950:#2A3F3E; /*oklch(0.266, 0.065, 152.934)*/
     --green-400:#54c28d;
     --green-500: #00875f;
+
+    --red-500:#F75A68;
 }
 
 :focus{
